--- a/src/main/resources/templates/biblio.html
+++ b/src/main/resources/templates/biblio.html
@@ -24,6 +24,10 @@
                 th:if="${collection.year2} != null and ${collection.year1} != ${collection.year2}"
                 th:text="|–${collection.year2}"></span>
         </li>
+        <li th:if="${genres} != null">
+          <strong>Žanrs</strong>:
+          <span th:text="${genres}"/>
+        </li>
         <li th:if="${biblioImage} != null">
           <a th:href="${biblioImage}">
             <img th:src="${biblioImage}"
@@ -57,6 +61,10 @@
         <li>
           <strong>Manuskripts</strong>:
           <span th:text="${currentBook.manuscript} ? 'jā' : 'nē'"></span>
+        </li>
+        <li th:if="${genres} != null and ${collection} == null" >
+          <strong>Žanrs</strong>:
+          <span th:text="${genres}"/>
         </li>
         <li th:if="${biblioImage} != null and ${collection} == null" >
           <a th:href="${biblioImage}">
