DB changes implemented: - removed books.id, have composite ID in table books_authors; - books.full_source -> books.full_source_code; - books_authors.cover_author -> books_authors.is_cover_author and books_authors.is_fragment_author; - enum for books.index_type - books/genres relation is now @ManyToMany without need for additional repository object. Co-authored-by: martins-spektors <232586491+martins-spektors@users.noreply.github.com>

--- a/src/main/resources/templates/biblio.html
+++ b/src/main/resources/templates/biblio.html
@@ -4,8 +4,8 @@
   <section>
     <h1>
       Bibliogrāfija (<a
-            href="/book/Ab1234_BC" th:href="|/books/${currentBook.fullSource}"
-            th:text="${currentBook.fullSource}">Ab1234_CD></a>)
+            href="/book/Ab1234_BC" th:href="|/books/${currentBook.fullSourceCode}"
+            th:text="${currentBook.fullSourceCode}">Ab1234_CD></a>)
     </h1>
     <div th:if="${collection} != null">
       <h2>Avots</h2>
